--- a/mprCopyCropBox/mprCopyCropBox.csproj
+++ b/mprCopyCropBox/mprCopyCropBox.csproj
@@ -4,7 +4,7 @@
 		<Version>1.1.0.0</Version>
 		<RootNamespace>mprCopyCropBox</RootNamespace>
 		<AssemblyName>$(RootNamespace)</AssemblyName>
-		<Configurations>Debug;R2017;R2018;R2019;R2020;R2021;R2022</Configurations>
+		<Configurations>Debug;R2017;R2018;R2019;R2020;R2021;R2022;R2023</Configurations>
 		<Platforms>x64</Platforms>
 	</PropertyGroup>
 
@@ -19,8 +19,8 @@
 		<Optimize>false</Optimize>
 		<Prefer32Bit>false</Prefer32Bit>
 		<UseWpf>true</UseWpf>
-		<LangVersion>latest</LangVersion>
 		<MSBuildWarningsAsMessages>MSB3270</MSBuildWarningsAsMessages>
+		<LangVersion>latest</LangVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)' == 'R2017'">
@@ -53,9 +53,14 @@
 		<Description>2022</Description>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)' == 'R2023'">
+		<TargetFramework>net48</TargetFramework>
+		<Description>2023</Description>
+	</PropertyGroup>
+
 	<PropertyGroup Condition="'$(Configuration)' == 'Debug'">
 		<TargetFramework>net48</TargetFramework>
-		<Description>2022</Description>
+		<Description>2023</Description>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)' == 'Debug'">
@@ -72,37 +77,42 @@
 
 	<ItemGroup Condition="'$(Configuration)'=='R2017'">
 		<PackageReference Include="ModPlus.Revit.API.2017" Version="2.0.0" ExcludeAssets="runtime" />
-		<PackageReference Include="ModPlus.Revit.Module.2017" Version="9.3.2" ExcludeAssets="runtime" />
+		<PackageReference Include="ModPlus.Revit.Module.2017" Version="10.0.0" ExcludeAssets="runtime" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(Configuration)'=='R2018'">
 		<PackageReference Include="ModPlus.Revit.API.2018" Version="2.0.0" ExcludeAssets="runtime" />
-		<PackageReference Include="ModPlus.Revit.Module.2018" Version="9.3.2" ExcludeAssets="runtime" />
+		<PackageReference Include="ModPlus.Revit.Module.2018" Version="10.0.0" ExcludeAssets="runtime" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(Configuration)'=='R2019'">
 		<PackageReference Include="ModPlus.Revit.API.2019" Version="3.0.0" ExcludeAssets="runtime" />
-		<PackageReference Include="ModPlus.Revit.Module.2019" Version="9.3.2" ExcludeAssets="runtime" />
+		<PackageReference Include="ModPlus.Revit.Module.2019" Version="10.0.0" ExcludeAssets="runtime" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(Configuration)'=='R2020'">
 		<PackageReference Include="ModPlus.Revit.API.2020" Version="3.0.0" ExcludeAssets="runtime" />
-		<PackageReference Include="ModPlus.Revit.Module.2020" Version="9.3.2" ExcludeAssets="runtime" />
+		<PackageReference Include="ModPlus.Revit.Module.2020" Version="10.0.0" ExcludeAssets="runtime" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(Configuration)'=='R2021'">
 		<PackageReference Include="ModPlus.Revit.API.2021" Version="3.0.0" ExcludeAssets="runtime" />
-		<PackageReference Include="ModPlus.Revit.Module.2021" Version="9.3.2" ExcludeAssets="runtime" />
+		<PackageReference Include="ModPlus.Revit.Module.2021" Version="10.0.0" ExcludeAssets="runtime" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(Configuration)'=='R2022'">
 		<PackageReference Include="ModPlus.Revit.API.2022" Version="3.0.0" ExcludeAssets="runtime" />
-		<PackageReference Include="ModPlus.Revit.Module.2022" Version="9.3.2" ExcludeAssets="runtime" />
+		<PackageReference Include="ModPlus.Revit.Module.2022" Version="10.0.0" ExcludeAssets="runtime" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(Configuration)'=='R2023'">
+		<PackageReference Include="ModPlus.Revit.API.2023" Version="3.0.0" ExcludeAssets="runtime" />
+		<PackageReference Include="ModPlus.Revit.Module.2023" Version="10.0.0" ExcludeAssets="runtime" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(Configuration)'=='Debug'">
-		<PackageReference Include="ModPlus.Revit.API.2022" Version="3.0.0" ExcludeAssets="runtime" />
-		<PackageReference Include="ModPlus.Revit.Module.2022" Version="9.3.2" ExcludeAssets="runtime" />
+		<PackageReference Include="ModPlus.Revit.API.2023" Version="3.0.0" ExcludeAssets="runtime" />
+		<PackageReference Include="ModPlus.Revit.Module.2023" Version="10.0.0" ExcludeAssets="runtime" />
 	</ItemGroup>
 
 	<ItemGroup>
